--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   <section>
     <h2>Before & After Gallery</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/400x250?text=Before" alt="Before">
-      <img src="https://via.placeholder.com/400x250?text=After" alt="After">
+      <img src="/storage/emulated/0/Pictures/Screenshots/before1image.jpg alt="Before">
+      <img src="/storage/emulated/0/Pictures/Screenshots/after1image.jpg alt="After">
     </div>
   </section>
 
